# databento-cpp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  live.hpp  live_blocking.hpp  live_threaded.hpp  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yaml  release.yaml
cmake/: CompilerWarnings.cmake  FindZstd.cmake  Findzstd.cmake  Sanitizers.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  databentoConfig.cmake.in  mingw-w64-x86_64.cmake  system.hpp.in  version.hpp.in
example/: CMakeLists.txt  batch.cpp  metadata.cpp  readme.cpp  symbology_resolve.cpp  timeseries_stream.cpp  timeseries_stream_to_file.cpp
example/historical/: CMakeLists.txt  batch.cpp  metadata.cpp  readme.cpp  symbology_resolve.cpp  timeseries_get_range.cpp  timeseries_get_range_to_file.cpp  timeseries_stream.cpp  timeseries_stream_to_file.cpp
example/live/: CMakeLists.txt  readme.cpp  simple.cpp
examples/: CMakeLists.txt
examples/historical/: CMakeLists.txt  batch.cpp  metadata.cpp  readme.cpp  symbology_resolve.cpp  timeseries_get_range.cpp  timeseries_get_range_to_file.cpp
examples/live/: CMakeLists.txt  live_smoke_test.cpp  readme.cpp  simple.cpp
include/databento/: batch.hpp  compat.hpp  constants.hpp  datetime.hpp  dbn.hpp  dbn_decoder.hpp  dbn_encoder.hpp  dbn_file_store.hpp  dbn_parser.hpp  dbn_store.hpp  dbz.hpp  dbz_parser.hpp  enums.hpp  exceptions.hpp  file_bento.hpp  file_stream.hpp  fixed_price.hpp  flag_set.hpp  historical.hpp  http_client.hpp  ireadable.hpp  iwritable.hpp  live.hpp  live_blocking.hpp  live_subscription.hpp  live_threaded.hpp  log.hpp  metadata.hpp  pretty.hpp  publishers.hpp  record.hpp  symbol_map.hpp  symbology.hpp  timeseries.hpp  v1.hpp  v2.hpp  v3.hpp  with_ts_out.hpp
include/databento/detail/: buffer.hpp  dbn_buffer_decoder.hpp  file_stream.hpp  http_client.hpp  http_stream_reader.hpp  json_helpers.hpp  live_connection.hpp  scoped_fd.hpp  scoped_thread.hpp  shared_channel.hpp  socket.hpp  tcp_client.hpp  tcp_readable.hpp  zstd_stream.hpp
pkg/: .gitignore  PKGBUILD
scripts/: build.sh  get_version.sh  test.sh
src/: batch.cpp  compat.cpp  datetime.cpp  dbn.cpp  dbn_constants.hpp  dbn_decoder.cpp  dbn_encoder.cpp  dbn_file_store.cpp  dbn_parser.cpp  dbn_store.cpp  dbz.cpp  dbz_parser.cpp  encode_decode_constants.hpp  enums.cpp  exceptions.cpp  file_bento.cpp  file_stream.cpp  fixed_price.cpp  flag_set.cpp  historical.cpp  http_client.cpp  live.cpp  live_blocking.cpp  live_threaded.cpp  log.cpp  metadata.cpp  parse_stream.cpp  parse_stream.hpp  pretty.cpp  publishers.cpp  record.cpp  scoped_thread.hpp  stream_op_helper.hpp  symbol_map.cpp  symbology.cpp  v1.cpp  v2.cpp  v3.cpp
src/detail/: buffer.cpp  dbn_buffer_decoder.cpp  file_stream.cpp  http_client.cpp  http_stream_reader.cpp  json_helpers.cpp  live_connection.cpp  scoped_fd.cpp  shared_channel.cpp  socket.cpp  stream_op_helper.hpp  tcp_client.cpp  tcp_readable.cpp  zstd_stream.cpp
test/: CMakeLists.txt
test/cmake_fetch_content/: CMakeLists.txt
test/cmake_fetch_content/project/: CMakeLists.txt  main.cpp
test/cmake_import/project/: CMakeLists.txt
test/data/: test_data.cbbo.dbn.zst  test_data.cbbo.v1.dbn.zst
test/include/: temp_file.hpp
test/include/mock/: mock_http_server.hpp  mock_io.hpp  mock_lsg_server.hpp  mock_server.hpp  mock_tcp_server.hpp
test/src/: batch_tests.cpp  datetime_tests.cpp  dbn_decoder_tests.cpp  dbn_encoder_tests.cpp  dbn_parser_tests.cpp  dbn_tests.cpp  dbz_parser_tests.cpp  dbz_tests.cpp  file_stream_tests.cpp  flag_set_tests.cpp  historical_tests.cpp  http_client_tests.cpp  live_blocking_tests.cpp  live_tests.cpp  live_threaded_tests.cpp  log_tests.cpp  metadata_tests.cpp  mock_http_server.cpp  mock_lsg_server.cpp  mock_server.cpp  mock_tcp_server.cpp  parse_stream_tests.cpp  record_tests.cpp  scoped_thread_tests.cpp  shared_channel_tests.cpp  stream_op_helper_tests.cpp  symbol_map_tests.cpp  symbology_tests.cpp  tcp_client_tests.cpp  zstd_stream_tests.cpp
tests/: CMakeLists.txt
tests/cmake_fetch_content/project/: CMakeLists.txt
tests/cmake_import/: CMakeLists.txt
tests/cmake_import/project/: CMakeLists.txt  main.cpp
tests/data/: test_data.cbbo-1s.v1.dbn.zst  test_data.cbbo.dbn  test_data.cbbo.v1.dbn  test_data.cbbo.v1.dbn.zst  test_data.cmbp-1.v1.dbn  test_data.cmbp-1.v1.dbn.zst
tests/include/: temp_file.hpp
tests/include/mock/: mock_http_server.hpp  mock_io.hpp  mock_log_receiver.hpp  mock_lsg_server.hpp  mock_tcp_server.hpp
tests/src/: batch_tests.cpp  buffer_tests.cpp  datetime_tests.cpp  dbn_decoder_tests.cpp  dbn_encoder_tests.cpp  dbn_file_store_tests.cpp  dbn_tests.cpp  exception_tests.cpp  file_stream_tests.cpp  flag_set_tests.cpp  historical_tests.cpp  http_client_tests.cpp  live_blocking_tests.cpp  live_tests.cpp  live_threaded_tests.cpp  log_tests.cpp  metadata_tests.cpp  mock_http_server.cpp  mock_io.cpp  mock_lsg_server.cpp  mock_tcp_server.cpp  pretty_tests.cpp  record_tests.cpp  scoped_thread_tests.cpp  shared_channel_tests.cpp  stream_op_helper_tests.cpp  symbol_map_tests.cpp  symbology_tests.cpp  tcp_client_tests.cpp  v1_tests.cpp  zstd_stream_tests.cpp
